--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 
   <div class="container">
     <div class="logo">
-        <img src="siggraph-bnmit-wordmark.png" alt="Siggraph BNMIT" style="width: 20px; height: 20px;">
+        <img src="siggraph-bnmit-wordmark.png" alt="Siggraph BNMIT" style="width: relative; height: 20px;">
     </div>
     <div class="merchant-name">Siggraph BNMIT</div>
     <div class="upi-id">BHARATPE.8O0P0Q6N1Q60857@fbpe</div>
